--- a/app/sass/base/base.scss
+++ b/app/sass/base/base.scss
@@ -5,7 +5,7 @@ $primary-color: #3f71ff;
 }
 
 body, html {
-  font-family: 'Roboto Mono', monospace;
+  font-family: 'Brandon Text', monospace;
   opacity: 1;
 }
 
