added layout selection

--- a/app/sass/modules/index.scss
+++ b/app/sass/modules/index.scss
@@ -1,5 +1,5 @@
 @import 'ui.scss';
 @import 'ui-taglist.scss';
-@import 'ui-header.scss';
+@import 'ui-tabs.scss';
 @import 'canvas.scss';
 @import 'tooltip.scss';
