--- a/app/sass/modules/ui-taglist.scss
+++ b/app/sass/modules/ui-taglist.scss
@@ -9,10 +9,15 @@
   cursor: pointer;
 
   &.is-selected {
-    background-color: red;
+    background-color: $c-accent-1;
+    color: $c-dark-1;
   }
 
   &:hover {
     background-color: rgba(#fff, .8);
+
+    &.is-selected {
+      background-color: rgba($c-accent-1, .9);
+    }
   }
 }
