cluster layout and coin info

--- a/app/sass/modules/tooltip.scss
+++ b/app/sass/modules/tooltip.scss
@@ -18,7 +18,12 @@
 }
 
 .tooltip__subtitle {
-  font-size: 12px;
+  font-size: 13px;
   font-weight: 400;
   line-height: 1.2em;
+  margin-bottom: 20px;
+}
+
+.tooltip__data {
+  color: $c-accent-1;
 }
